# drylib

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
drylib-proc-macros/: Cargo.toml
drylib-proc-macros/src/: clones_prefix.rs  lib.rs
drylib-procs/: Cargo.toml  README.md
drylib-procs/src/: ams.rs  ams_prefix.rs  clones.rs  clones_prefix.rs  getters.rs  lib.rs  muts.rs  parse.rs  pubimpl.rs
examples/: clones.rs  muts.rs  structs.rs
src/: clones.rs  drylib_decl_macros.rs  drylib_declarative_macros.rs  drylib_decls.rs  lib.rs  muts.rs
testik/: Cargo.toml  test.rs
tests/: Cargo.toml  lib.rs
