[package]
name = "drylib"
version = "0.1.1"
edition = "2021"
authors = ["Mark Tyrkba <marktyrkba456@gmail.com>"]
categories = ["macros-and-metaprogramming", "development-tools::procedural-macro-helpers", "code-generation"]
description = "Rust macro-library for Don't Repeating Yourself"
keywords = ["macros", "dry", "drylib"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rakivo/drylib"
rust-version = "1.79.0"

[dependencies]
drylib-proc-macros = { path = "drylib-proc-macros", optional = true }
    
[features]
default = ["muts", "decls", "clones"]
decls = []
muts = ["drylib-proc-macros/muts"]
clones = ["drylib-proc-macros/clones"]
mutclones = ["drylib-proc-macros/mutclones"]
clones-prefix-c = ["drylib-proc-macros/clones-prefix-c"]
clones-prefix-cl = ["drylib-proc-macros/clones-prefix-cl"]
clones-prefix-clo = ["drylib-proc-macros/clones-prefix-clo"]
clones-prefix-clon = ["drylib-proc-macros/clones-prefix-clon"]
clones-prefix-clone = ["drylib-proc-macros/clones-prefix-clone"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
