[package]
name = "drylib"
version = "0.1.6"
edition = "2021"
authors = ["Mark Tyrkba <marktyrkba456@gmail.com>"]
categories = ["development-tools", "development-tools::procedural-macro-helpers"]
description = "Rust macro-library for Don't Repeating Yourself"
keywords = ["macros", "dry", "drylib"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rakivo/drylib"
rust-version = "1.79.0"

[dependencies]
drylib-procs = { version = "0.1.0", optional = true }
    
[features]
default = ["muts", "decls", "clones", "mutclones", "drylib-procs"]
decls = []
muts                = ["drylib-procs/muts"]
clones              = ["drylib-procs/clones"]
mutclones           = ["drylib-procs/mutclones"]
clones-prefix-c     = ["drylib-procs/clones-prefix-c"]
clones-prefix-cl    = ["drylib-procs/clones-prefix-cl"]
clones-prefix-clo   = ["drylib-procs/clones-prefix-clo"]
clones-prefix-clon  = ["drylib-procs/clones-prefix-clon"]
clones-prefix-clone = ["drylib-procs/clones-prefix-clone"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.playground]
features = ["muts", "decls", "clones", "mutclones", "drylib-proc-macros"]
