[package]
name = "drylib-procs"
version = "0.1.3"
edition = "2021"
authors = ["Mark Tyrkba <marktyrkba456@gmail.com>"]
categories = ["development-tools", "development-tools::procedural-macro-helpers"]
description = "Rust macro-library for Don't Repeating Yourself"
keywords = ["macros", "dry", "drylib"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rakivo/drylib/tree/main/drylib-procs"
rust-version = "1.79.0"
    
[features]
default = ["muts", "clones", "mutclones"]
muts = []
clones = []
mutclones = []
clones-prefix-c = []
clones-prefix-cl = []
clones-prefix-clo = []
clones-prefix-clon = []
clones-prefix-clone = []

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
